--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -266,15 +266,28 @@ main {
     table {
       width: 100%;
       table-layout: auto;
-      text-align: center;
+      //text-align: center;
 
       th {
+        padding:1rem 2rem;
         background-color: #f1b846;
         color: #fff;
+
+        &:first-of-type, &:last-of-type:not(.date){
+            width:5rem;
+        }
       }
 
       tr:nth-child(odd) {
         background-color: #f1b846aa;
+      }
+      
+      td{
+        padding:1rem 2rem;
+
+        img{
+            display:none;
+        }
       }
     }
   }
@@ -473,8 +486,7 @@ footer {
 
 /*   RESPONSIVE   */
 
-@media screen and (min-width: $tablet-up){ // 700px
-    
+@media screen and (min-width: $tablet-up){ // 700px 
     header {
         position: relative;
         background-image: url(../../assets/imgs/bg/pexels-barry-plott-48592-753410.jpg);
@@ -496,10 +508,16 @@ footer {
     main{
         width: 90%;
         margin:auto;
-
-        
+        .ranking{
+            table td img{
+                display:inline;
+                width:5rem;
+                margin-right: 2rem;
+                vertical-align: middle;
+                border-radius: 50%;
+            }
+        }   
     }
-
 } 
 
 @media screen and (min-width: $desktop-up){ // 1024 px
