--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -30,28 +30,7 @@
         </div>        
     </section>
 
-    <section class="ranking">
-        <h2>Le classement</h2>
-        <table>
-            <tr>
-                <th>Place</th>
-                <th>Prénom</th>
-                <th>Points</th>
-            </tr>
-            {% if rankings is not empty %}
-                {% for ranking in rankings %}
-            <tr>
-                <td>{{loop.index}}</td>
-                <td>{{ranking[0].user.firstname}}</td>
-                <td>{{ranking.totalPoints}}</td>
-            </tr>
-                {% endfor %}
-
-            {% else %}
-            <tr><td colspan="4">Aucune participation pour le moment !</td></tr>
-            {% endif %}
-        </table>
-    </section>
+    {% include 'includes/_ranking.html.twig' with {'home' : true} %}
 
     {# <section class="blog">
         <h2>Le blog</h2>
