--- a/templates/calendar/index.html.twig
+++ b/templates/calendar/index.html.twig
@@ -11,7 +11,7 @@
         <p>{{calendar.challenge.description}}</p>
 
         {% if not app.user %}
-            {{ include('_login.html.twig')}} 
+            {{ include('includes/_login.html.twig')}} 
         {% endif %}
     </section>
 
