--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -269,62 +269,61 @@ main {
       //text-align: center;
 
       th {
-        padding:1rem 2rem;
+        padding: 1rem 2rem;
         background-color: #f1b846;
         color: #fff;
 
-        &:first-of-type, &:last-of-type:not(.date){
-            width:5rem;
+        &:first-of-type,
+        &:last-of-type:not(.date) {
+          width: 5rem;
         }
       }
 
       tr:nth-child(odd) {
         background-color: #f1b846aa;
       }
-      
-      td{
-        padding:1rem 2rem;
 
-        img{
-            display:none;
+      td {
+        padding: 1rem 2rem;
+
+        img {
+          display: none;
         }
       }
     }
   }
-  
-  section.game{
-    div#quiz{
-        margin-bottom:2rem;
 
-      label{
-        display:inline-block;
+  section.game {
+    div#quiz {
+      margin-bottom: 2rem;
+
+      label {
+        display: inline-block;
         color: $colorGreen;
         margin: 2rem 0 1rem;
-        font-weight:500;
-
+        font-weight: 500;
       }
 
-      input.text-type{
+      input.text-type {
         display: block;
-        width:100%;
-        padding:1rem;
+        width: 100%;
+        padding: 1rem;
         margin: 1rem 0 2rem;
-        
-    }
-    .choice-type{
-        & > label{
-            margin:0 0 1rem 0;
-            display: inline-block;
-            width:calc(100% - 4rem);
-            color:#302f2f;
-            font-weight: 400;
-        } 
-          
-        input{
-            display: inline-block;
-            width:4rem;
+      }
+      .choice-type {
+        & > label {
+          margin: 0 0 1rem 0;
+          display: inline-block;
+          width: calc(100% - 4rem);
+          color: #302f2f;
+          font-weight: 400;
         }
-    }
+
+        input {
+          display: inline-block;
+          width: 4rem;
+        }
+      }
 
       & + button.btn.submit {
         border: none;
@@ -365,43 +364,43 @@ main {
     }
   }
 
-  section.galerie{
-    .elements{
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
-        gap: 10px;
-        margin:2rem auto;
-        
-        figure{
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            
-            a{
-                line-height: 0;
-            }
+  section.galerie {
+    .elements {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
+      gap: 10px;
+      margin: 2rem auto;
 
-            img{
-                width: 100%;
-                height: auto;
-                aspect-ratio: 1/1;
-                object-fit: cover;
-                border-radius: .8rem .8rem 0 0;
-            }
+      figure {
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
 
-            figcaption{
-                font-size:0.9em;
-                text-align: center;
-                background-color:#f1b846;
-                padding:1rem;
-                color:#fff;
-                font-weight: 600;
-                width:100%;
-                border-radius: 0 0 .8rem .8rem;
-            }
+        a {
+          line-height: 0;
         }
+
+        img {
+          width: 100%;
+          height: auto;
+          aspect-ratio: 1/1;
+          object-fit: cover;
+          border-radius: 0.8rem 0.8rem 0 0;
+        }
+
+        figcaption {
+          font-size: 0.9em;
+          text-align: center;
+          background-color: #f1b846;
+          padding: 1rem;
+          color: #fff;
+          font-weight: 600;
+          width: 100%;
+          border-radius: 0 0 0.8rem 0.8rem;
+        }
+      }
     }
   }
   .register-form,
@@ -419,8 +418,8 @@ main {
       display: block;
       width: 80%;
       margin: 0.5rem auto 1rem;
-      padding:1rem;
-      font-size:inherit;
+      padding: 1rem;
+      font-size: inherit;
       color: #5c5b5b;
       text-align: center;
       font-weight: inherit;
@@ -472,8 +471,6 @@ main {
       }
     }
   }
-
-
 }
 
 footer {
@@ -486,89 +483,91 @@ footer {
 
 /*   RESPONSIVE   */
 
-@media screen and (min-width: $tablet-up){ // 700px 
-    header {
-        position: relative;
-        background-image: url(../../assets/imgs/bg/pexels-barry-plott-48592-753410.jpg);
-        background-repeat: no-repeat;
-        background-size: cover;
-    
-        nav {
-          background-color: $colorGreen;
-        }
+@media screen and (min-width: $tablet-up) {
+  // 700px
+  header {
+    position: relative;
+    background-image: url(../../assets/imgs/bg/pexels-barry-plott-48592-753410.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 
-        h1,
-        h1 span {
-          color: $colorWhite;
-          font-size: 12rem;
-          text-shadow: 5px 2px 9px black;
-        }
+    nav {
+      background-color: $colorGreen;
     }
 
-    main{
-        width: 90%;
-        margin:auto;
-        .ranking{
-            table td img{
-                display:inline;
-                width:5rem;
-                margin-right: 2rem;
-                vertical-align: middle;
-                border-radius: 50%;
-            }
-        }   
+    h1,
+    h1 span {
+      color: $colorWhite;
+      font-size: 12rem;
+      text-shadow: 5px 2px 9px black;
     }
-} 
+  }
 
-@media screen and (min-width: $desktop-up){ // 1024 px
-    header{
-        h1{
-            font-size: 15rem;
-        }
-        nav {
-            padding: 2rem;
-            ul {
-              justify-content: center;
-        
-              li {
-                margin: auto 6rem;
-              }
-            }
-        }
+  main {
+    width: 90%;
+    margin: auto;
+    .ranking {
+      table td img {
+        display: inline;
+        width: 5rem;
+        margin-right: 2rem;
+        vertical-align: middle;
+        border-radius: 50%;
+      }
     }
-
-    body{
-        font-size:2rem;
-
-        main{
-            width: 80%;
-    
-            h2{
-                font-size:11rem;
-            }
-
-            .calendar {
-                width: 80%;
-                margin: auto;
-            }
-
-            .register-form, .login-form{
-                input:not([type=checkbox]){
-                    max-width: 45rem;
-                    font-size:inherit;
-                }
-
-                button[type=submit]{
-                    max-width: 45rem;
-                }
-            }
-        }
-    }
-} 
-
-@media screen and (min-width: $widescreen-up){
-    main{
-        max-width:120rem;
-    }
+  }
 }
 
+@media screen and (min-width: $desktop-up) {
+  // 1024 px
+  header {
+    h1 {
+      font-size: 15rem;
+    }
+    nav {
+      padding: 2rem;
+      ul {
+        justify-content: center;
+
+        li {
+          margin: auto 6rem;
+        }
+      }
+    }
+  }
+
+  body {
+    font-size: 2rem;
+
+    main {
+      width: 80%;
+
+      h2 {
+        font-size: 11rem;
+      }
+
+      .calendar {
+        width: 80%;
+        margin: auto;
+      }
+
+      .register-form,
+      .login-form {
+        input:not([type="checkbox"]) {
+          max-width: 45rem;
+          font-size: inherit;
+        }
+
+        button[type="submit"] {
+          max-width: 45rem;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: $widescreen-up) {
+  main {
+    max-width: 120rem;
+  }
+}
