--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -10,7 +10,7 @@
         </article>
 
         {% if not app.user %}
-            {{ include('_login.html.twig')}} 
+            {{ include('includes/_login.html.twig')}} 
         {% endif %}
     </section>
 
