--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -38,8 +38,6 @@ body {
   position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  min-height: 100vh;
   background: #fff;
   color: #302f2f;
   font-size: 1.8rem;
@@ -85,8 +83,8 @@ h1 span {
   padding: 1rem;
   font-size: 3rem;
   font-weight: 700;
-  width: 20rem;
-  height: 20rem;
+  width: 15rem;
+  height: 15rem;
   background: radial-gradient(circle, #d0e9f5, #dbefff);
   border-radius: 50%;
   box-shadow: inset 0 0 10px rgba(255, 255, 255, 0.5), 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -124,7 +122,7 @@ h1 span {
 }
 
 main {
-  padding: 0 2rem;
+  padding: 0 1rem;
   text-align: justify;
 }
 main section {
@@ -207,7 +205,7 @@ main .calendar div.table {
 }
 main .calendar div.table a {
   display: inline-block;
-  width: calc(20% - 1rem);
+  width: calc(20% - 0.5rem);
   line-height: 0;
   margin: 0.2rem;
 }
@@ -220,14 +218,12 @@ main .calendar table {
 main .ranking table {
   width: 100%;
   table-layout: auto;
+  font-size: 1.6rem;
 }
 main .ranking table th {
-  padding: 1rem 2rem;
+  padding: 0.5rem 1rem;
   background-color: #f1b846;
   color: #fff;
-}
-main .ranking table th:first-of-type, main .ranking table th:last-of-type:not(.date) {
-  width: 5rem;
 }
 main .ranking table tr:nth-child(odd) {
   background-color: rgba(241, 184, 70, 0.6666666667);
@@ -264,37 +260,29 @@ main section.game div#quiz .choice-type input {
   display: inline-block;
   width: 4rem;
 }
-main section.game div#quiz + button.btn.submit {
+main section.game form[name=photo] label {
+  display: inline-block;
+  color: #0b5d31;
+  margin: 2rem 0 1rem;
+  font-weight: 500;
+}
+main section.game form[name=photo] input[type=file] {
+  display: block;
+  width: 100%;
+  margin: 2rem auto;
+  font-size: inherit;
+}
+main section.game button.btn.submit {
   border: none;
   padding: 1rem;
-  font-size: inherit;
+  font-size: 1.6rem;
   color: white;
   background-color: #0b5d31;
   cursor: pointer;
 }
-main section.game form[name=photo] {
-  display: flex;
-}
-main section.game form[name=photo] div#photo {
-  width: 70%;
-}
-main section.game form[name=photo] div#photo input[type=file] {
-  display: block;
-  width: 100%;
-  border: 0.1rem solid #0b5d31;
-}
-main section.game form[name=photo] div#photo input[type=file]::file-selector-button {
-  padding: 1rem;
-  border: none;
-  background-color: #0b5d31;
-  color: #fff;
-  cursor: pointer;
-}
-main section.game form[name=photo] button {
-  width: 30%;
-  background-color: #0b5d31;
-  border: none;
-  color: #fff;
+main section.game .already-done {
+  color: #0b5d31;
+  font-weight: 500;
 }
 main section.galerie .elements {
   display: grid;
@@ -420,8 +408,18 @@ footer {
     text-shadow: 5px 2px 9px black;
   }
   main {
+    padding: 0 2rem;
     width: 90%;
     margin: auto;
+  }
+  main .ranking table {
+    font-size: 1.8rem;
+  }
+  main .ranking table th {
+    padding: 1rem 2rem;
+  }
+  main .ranking table th:first-of-type, main .ranking table th:last-of-type:not(.date) {
+    width: 5rem;
   }
   main .ranking table td img {
     display: inline;
@@ -444,6 +442,10 @@ footer {
   header nav ul li {
     margin: auto 6rem;
   }
+  header .ball {
+    width: 20rem;
+    height: 20rem;
+  }
   body {
     font-size: 2rem;
   }
@@ -457,11 +459,13 @@ footer {
     width: 80%;
     margin: auto;
   }
-  body main .register-form input:not([type=checkbox]), body main .login-form input:not([type=checkbox]) {
+  body main .register-form input:not([type=checkbox]),
+  body main .login-form input:not([type=checkbox]) {
     max-width: 45rem;
     font-size: inherit;
   }
-  body main .register-form button[type=submit], body main .login-form button[type=submit] {
+  body main .register-form button[type=submit],
+  body main .login-form button[type=submit] {
     max-width: 45rem;
   }
 }
