--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -174,6 +174,7 @@ main {
   p {
     margin: 2rem 0;
     text-align: center;
+    line-height: 2.8rem;
     a {
       font-weight: 700;
       color: $colorGreen;
@@ -292,6 +293,7 @@ main {
 
       label {
         display: inline-block;
+        text-align: left;
         color: $colorGreen;
         margin: 2rem 0 1rem;
         font-weight: 500;
@@ -316,7 +318,14 @@ main {
           display: inline-block;
           width: 4rem;
         }
-      }      
+      } 
+
+      .audio-type-label{
+        audio{
+          display: block;
+          margin-top:1rem;
+        }
+      }
     }
 
     form[name="photo"] {
@@ -468,6 +477,24 @@ footer {
 }
 
 /*   RESPONSIVE   */
+
+@media screen and (min-width: $phone-down){ //500px
+  main{
+    div#quiz {
+      .audio-type{
+        
+      }
+      .audio-type-label{
+        audio{
+
+          margin-top:1rem;
+        }
+      }
+    }
+  }
+  
+}
+
 
 @media screen and (min-width: $tablet-up) {
   // 700px
