Corrections uploads imgs

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -435,6 +435,9 @@ footer {
   main .ranking table td img {
     display: inline;
     width: 5rem;
+    height: 5rem;
+    -o-object-fit: cover;
+       object-fit: cover;
     margin-right: 2rem;
     vertical-align: middle;
     border-radius: 50%;
