--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{% block title %}Calendrier de l'avent{% endblock %}</title>
-        
+        <link rel="icon" href="{{asset('imgs/icons/pere-noel.png')}}" />
         {% block stylesheets %}{% endblock %}
 
         {% block javascripts %}
