--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -5,8 +5,7 @@
 {% block body %}
     <section>
         <article>
-            <p>Cette année, Noël se fête en ligne à travers un calendrier de l'avent intéractif et un bingo de Noël !</p> 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde nobis eveniet necessitatibus saepe delectus rem laborum, id iste, sunt aut vero, ex minima quis quaerat repellendus sint? In, nemo officia.</p>
+            <p>Bienvenue dans ce nouveau calendrier de l'avent interractif ! Chaque jour jusqu'à Noël, ouvrez une case du calendrier découvrez un nouveau défi à relever. Comptons ensemble les jours qui nous séparent de cette fin d'année et offrons quelques paillettes de magie à nos quotidiens. </p> 
         </article>
 
         {% if not app.user %}
@@ -17,12 +16,12 @@
     <section class="calendar">
         <h2>Le calendrier</h2>
 
-        <p>Chaque jour, le calendrier de l'avent dévoile une nouvelle case contenant une activité, un petit jeu ou un défi à réaliser ! Chaque défi réalisé vous fera remporter des points. </p>
+        <p>Chaque jour, à minuit, le calendrier de l'avent dévoile une nouvelle case contenant une activité, un petit jeu ou un défi à réaliser ! Chaque défi réalisé vous fera remporter des points.</p>
         <p>Alors qui sera le maître de l'avent 2024&nbsp;?</p>
         <div class="table">
             {% if calendar %}
                 {% for day in calendar %}
-                <a {% if day.date <= date('12/24/2024') %} href="{{path('app_calendar_index', {id : day.id})}}" {% endif %}>
+                <a {% if day.date <= date('now') %} href="{{path('app_calendar_index', {id : day.id})}}" {% endif %}>
                     <img src="{{ asset('imgs/calendar/' ~ day.picture) }}" alt="calendrier du {{day.date|date('d/m')}}">
                 </a>
                 {% endfor %}
