--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -607,6 +607,21 @@ main {
   }
 }
 
+// annimation de flip sur les cases cliquables/date passée
+// .flipCase {
+//   animation: casePassed 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+// }
+// @keyframes casePassed {
+//   0% {
+//     transform: rotateY(80deg);
+//     opacity: 1;
+//   }
+//   100% {
+//     transform: rotateY(0);
+//     opacity: 0;
+//   }
+// }
+
 footer {
   padding: 2rem;
   margin-top: 2rem;
