--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -361,7 +361,7 @@ main {
   }
 
   section.game {
-    div#quiz {
+    div#quiz, div#participation {
       margin-bottom: 2rem;
 
       label {
@@ -372,11 +372,14 @@ main {
         font-weight: 500;
       }
 
-      input.text-type {
+      .text-type {
         display: block;
         width: 100%;
         padding: 1rem;
         margin: 1rem 0 2rem;
+      }
+      textarea{
+        height:10rem;
       }
       .choice-type {
         & > label {
@@ -435,9 +438,20 @@ main {
   section.galerie {
     .elements {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
       gap: 10px;
       margin: 2rem auto;
+
+      &.participation{
+        grid-template-columns: repeat(auto-fill, minmax(30rem, 1fr));
+      }
+
+      &.photo{
+        grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
+
+        a {
+          line-height: 0;
+        }
+      }
 
       figure {
         margin: 0;
@@ -446,8 +460,28 @@ main {
         flex-direction: column;
         align-items: center;
 
-        a {
-          line-height: 0;
+        &.text {
+          border-radius: 0.8rem;
+          border:#d89a1e .1rem solid;
+          justify-content: space-between;
+
+          a{
+            display:block;
+            width: 100%;
+            padding:1rem;
+            min-height:15rem;
+            text-align: justify;
+            
+
+          }
+          span.title{
+            text-align: center;
+            display: inline-block;
+            width:100%;
+            font-size:1.2em;
+            font-weight: 600;
+            color:#d89a1e;
+          }
         }
 
         img {
