--- a/templates/includes/_galerie.html.twig
+++ b/templates/includes/_galerie.html.twig
@@ -1,19 +1,27 @@
 <section class="galerie">
 <h3>Galerie des participations</h3>
-
-    <div class="elements">
+    <div class="elements {{type}}">
     {% if rankings is not empty %}
         {% for ranking in rankings %}
             {% if ranking.details is not empty %}
-                <figure>
+                {% if type == 'photo' %}
+                <figure class='photo'>
                     <a href="{{asset('uploads/challenges/' ~ calendar.challenge.uploadDirectory ~ ranking.details[0])}}" target="_blank">
                         <img src="{{asset('uploads/challenges/' ~ calendar.challenge.uploadDirectory ~ ranking.details[0])}}" alt="participation de {{ranking.user.firstname}}" width=100>
                     </a>
                     <figcaption>{{ranking.user.firstname}}</figcaption>
-                </figure>  
+                </figure>
+                {% elseif type == 'participation' %}
+                <figure class="text">
+                    <a href="{{ranking.details['link']}}" target="_blank">
+                        <span class='title'>{{ranking.details['title']}}</span>
+                        {{ranking.details['content']}}
+                    </a>
+                    <figcaption>{{ranking.user.firstname}}</figcaption>
+                </figure>
+                {% endif %}
             {% endif %}
         {% endfor %}
     {% endif %}
     </div>
-
 </section>
