--- a/templates/includes/_galerie.html.twig
+++ b/templates/includes/_galerie.html.twig
@@ -1,17 +1,17 @@
 <section class="galerie">
-<h3>Galerie des participations</h3>
-    <div class="elements {{type}}">
+<h2>Galerie des participations</h2>
+    <div class="elements {% if calendar.challenge.type is defined and calendar.challenge.type == 'PhotoChallenge' %} photo {% endif %}">
     {% if rankings is not empty %}
         {% for ranking in rankings %}
             {% if ranking.details is not empty %}
-                {% if type == 'photo' %}
+                {% if ranking.challenge.type == 'PhotoChallenge' %}
                 <figure class='photo'>
-                    <a href="{{asset('uploads/challenges/' ~ calendar.challenge.uploadDirectory ~ ranking.details[0])}}" target="_blank">
-                        <img src="{{asset('uploads/challenges/' ~ calendar.challenge.uploadDirectory ~ ranking.details[0])}}" alt="participation de {{ranking.user.firstname}}" width=100>
+                    <a href="{{asset('uploads/challenges/' ~ ranking.challenge.uploadDirectory ~ ranking.details[0])}}" target="_blank">
+                        <img src="{{asset('uploads/challenges/' ~ ranking.challenge.uploadDirectory ~ ranking.details[0])}}" alt="participation de {{ranking.user.firstname}}" width=100>
                     </a>
                     <figcaption>{{ranking.user.firstname}}</figcaption>
                 </figure>
-                {% elseif type == 'participation' %}
+                 {% elseif ranking.challenge.type == 'ParticipationChallenge' %}
                 <figure class="text">
                     <a href="{{ranking.details['link']}}" target="_blank">
                         <span class='title'>{{ranking.details['title']}}</span>
