--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -16,7 +16,7 @@
     <section class="calendar">
         <h2>Le calendrier</h2>
 
-        <p>Chaque jour, à minuit, le calendrier de l'avent dévoile une nouvelle case contenant une activité, un petit jeu ou un défi à réaliser ! Chaque défi réalisé vous fera remporter des points.</p>
+        <p>Chaque jour, le calendrier de l'avent dévoile une nouvelle case contenant une activité, un petit jeu ou un défi à réaliser ! Chaque défi réalisé vous fera remporter des points.</p>
         <p>Alors qui sera le maître de l'avent 2024&nbsp;?</p>
         <div class="table">
             {% if calendar %}
@@ -31,49 +31,5 @@
 
     {% include 'includes/_ranking.html.twig' with {'home' : true} %}
 
-    {# <section class="blog">
-        <h2>Le blog</h2>
-
-        <article>
-            <img src="" alt="">
-            <p>Lorem ipsum dolor.</p>
-        </article>
-        <article>
-            <img src="" alt="">
-            <p>Lorem ipsum dolor.</p>
-        </article>
-        <article>
-            <img src="" alt="">
-            <p>Lorem ipsum dolor.</p>
-        </article>
-        <article>
-            <img src="" alt="">
-            <p>Lorem ipsum dolor.</p>
-        </article>
-        <article>
-            <img src="" alt="">
-            <p>Lorem ipsum dolor.</p>
-        </article>
-        <article>
-            <img src="" alt="">
-            <p>Lorem ipsum dolor.</p>
-        </article>
-        <article>
-            <img src="" alt="">
-            <p>Lorem ipsum dolor.</p>
-        </article>
-        <article>
-            <img src="" alt="">
-            <p>Lorem ipsum dolor.</p>
-        </article>
-        <article>
-            <img src="" alt="">
-            <p>Lorem ipsum dolor.</p>
-        </article>
-        <article>
-            <img src="" alt="">
-            <p>Lorem ipsum dolor.</p>
-        </article>
-    </section> #}
 {% endblock %}
 
