--- a/templates/calendar/index.html.twig
+++ b/templates/calendar/index.html.twig
@@ -26,7 +26,7 @@
         </p>
     {% else %} 
 
-        {% if type == 'quiz' %} 
+        {% if calendar.challenge.type == 'QuizChallenge' %} 
             {{ include('calendar/_quiz.html.twig')}} 
         {% elseif type == 'photo' %}
             {{ include('calendar/_photo.html.twig')}}
@@ -36,7 +36,7 @@
 
     {% endif %}
     </section>
-    {% if type == 'photo' or type == 'participation' %}
+    {% if calendar.challenge.type == 'PhotoChallenge' or calendar.challenge.type == 'ParticipationChallenge' %}
         {{ include('includes/_galerie.html.twig')}}
     {% endif %}
 
